@@ -1,3 +1,6 @@
+11/18/2013 OsiMsk
+  - changed MIP optimizer to Mosek's own conic MIP optimizer, if Mosek version >= 7
+
 09/11/2013 OsiCpx
   - fixed getIterationCount() for MIPs (use CPXgetmipitcnt instead of CPXgetitcnt)
 
